[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Pirate Treasure/Gold Coin/01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Display_UI/Font/NokiaCellphoneFC.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Display_UI/GUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Display_UI/Sprites/Life Bars/Big Bars/lifebar-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Display_UI/Sprites/Life Bars/Big Bars/lifebar-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Display_UI/Audio/GameOver.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 10
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.631373 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.552941, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.529412 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.552941, 0, 0, 1 ) ]
}

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = 32.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 25.0
margin_right = -4.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ScoreContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="ScoreContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 27.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Sound" type="Node" parent="."]

[node name="GamerOver" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Control2" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.529412 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.552941, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.5
margin_bottom = 36.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control2/VBoxContainer"]
margin_right = 384.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "GameOver"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control2/VBoxContainer"]
margin_top = 58.0
margin_right = 384.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "You have been defeated, buccaneer"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="value_changed" from="TextureProgress" to="." method="_on_TextureProgress_value_changed"]
[connection signal="finished" from="Sound/GamerOver" to="." method="_on_GamerOver_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
